# chat-app

./: .env  Cargo.toml  chatapp.db
migrations/2023-10-11-152607_create_tasks/: up.sql
src/: main.rs  schema.rs
src/auth/: mod.rs
src/database/: mod.rs
src/database/sqlite/: mod.rs
src/snowflake/: error.rs  mod.rs
