[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
diesel = { version = "2.1.3", features = ["sqlite"] }
#reqwest = { version = "0.11.22", features = ["json"] }
#lru_time_cache = "0.11.11"
