[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

#reqwest = { version = "0.11.22", features = ["json"] }
#lru_time_cache = "0.11.11"
